chore: add GitHub Actions workflows for CI, snapshots, and releases (#5)